<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProfileActivity"
    tools:showIn="@layout/activity_profile"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp">

    <TextView
        android:id="@+id/textProfileSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createAccountSubtitle"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/textUsernamePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usernamePrompt"
        app:layout_constraintTop_toBottomOf="@id/textProfileSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"/>
    <TextView
        android:id="@+id/textUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/textUsernamePrompt"
        app:layout_constraintStart_toEndOf="@id/textUsernamePrompt"
        android:layout_marginStart="24dp"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/editUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/textUsernamePrompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/textUsernamePrompt">
        <requestFocus/>
    </EditText>

    <TextView
        android:id="@+id/textEmailPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailPrompt"
        app:layout_constraintTop_toBottomOf="@id/textUsernamePrompt"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"/>
    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toEndOf="@id/textEmailPrompt"
        app:layout_constraintBaseline_toBaselineOf="@id/textEmailPrompt"/>

    <TextView
        android:id="@+id/textIsMerchantPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/isMerchantPrompt"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/textEmailPrompt"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"/>
    <RadioGroup
        android:id="@+id/radioIsMerchant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/textIsMerchantPrompt">
        <RadioButton
            android:id="@+id/radio_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/yes"/>
        <RadioButton
            android:id="@+id/radio_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textTypeUserDescr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/typeUser"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/textEmailPrompt"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/textTypeUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@id/textTypeUserDescr"
        app:layout_constraintStart_toEndOf="@id/textTypeUserDescr"/>

    <TextView
        android:id="@+id/textError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioIsMerchant"
        android:textColor="#f00"/>

    <Button
        android:id="@+id/btnDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myshops"
        android:textColor="@color/colorBackground"
        android:background="@drawable/button_background_brown"
        android:visibility="gone"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/textTypeUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/colorBackground"
        android:background="@drawable/button_background_green"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/btnLogout"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBackground"
        android:background="@drawable/button_background_brown"
        android:text="@string/logout"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>