...
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/listDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="Nov 4, 2019"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
...
                android:background="@color/colorAccent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/listDate"/>

            <!-- Changed text from $4.56 to itemPrice string. Not sure what original was about-->
            <TextView
                android:id="@+id/listTotalCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/itemPrice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/listHorizLine"/>
...
